Projeto API CoinMarketCap

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <script type="text/javascript">
             //My api key
             var apikey = {
-                key: 'a0a7f394-700e-4ae2-9bf4-68de6eb8b473'
+                key: 'YOUR COINMARKETCAP API HERE'
             }
 
         //GET Fetch Requisition
